2009-09-08  Mario Carrion  <mcarrion@novell.com>

	* ComboBoxAutomationPeer.cs: New file.
	* ItemsControlAutomationPeer.cs: Moved ChildrenCore content to
	GetChildrenCore, no need to use ChildrenCore.
	* FrameworkElementAutomationPeer.cs: Catching exception when calling
	TransformToVisual.

	r: toshok

2009-09-03  Mario Carrion  <mcarrion@novell.com>

	* ItemAutomationPeer.cs: New internal properties: RealItem and 
	RealItemsControlAutomationPeer.
	* SelectorAutomationPeer.cs: Raising Selection and SelectionItem events.
	Fixed GetSelectedAutomationPeer. Property overridden:
	ScrollPatternImplementor
	* ItemsControlAutomationPeer.cs: ChildrenCore returns only ListBoxItems:
	ItemsControl.Items. New virtual property ScrollPatternImplementor.
	* SelectorItemAutomationPeer.cs: Now keeping a local copy of parent: 
	selector. Raising SelectionItem events. Property overridden: 
	RealItemsControlAutomationPeer.

	r: alan

2009-08-28  Mario Carrion  <mcarrion@novell.com>

	* SelectorItemAutomationPeer.cs: New property SelectionProvider. Fixed
	SelectionItemProvider implementation.

	r: alan

2009-08-25  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* HyperlinkButtonAutomationPeer.cs: Final implementation of
	  HyperlinkButton (based on stub implementation from Olivier
	  Dufour <olivier.duff@gmail.com>).

2009-08-24  Mario Carrion  <mcarrion@novell.com>

	* ItemAutomationPeer.cs: Reverted change to handle update KB970363
	(this update installed Silverlight 3 and is not backwards compatible)
	r:alan

2009-08-13  Mario Carrion  <mcarrion@novell.com>

	* AutomationPeer.cs: Fixed NRE when requesting cached properties
	by ATs.
	* ItemAutomationPeer.cs: Updated to match SL2 implementation.
	(Update KB970363)
	* AutomationSingleton.cs: Using #if to enabled accessibility depending
	on flag.
	* SelectorAutomationPeer.cs: Raising Selection Pattern events:
	Selection. Updated to match SL2.
	* AutomationCacheProperty.cs: Removed private variable, not 
	needed.